footer and ready to start card updated

--- a/home.html
+++ b/home.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/all.min.css" />
     <link rel="stylesheet" href="assets/css/responsive.css" />
-    <link href="https://fonts.cdnfonts.com/css/space-grotesk" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.21.5/dist/css/uikit.min.css" />
     
@@ -124,38 +123,26 @@
                 <span>Register Now — It’s FREE</span>
                 <p>Don’t just scroll—get involved.</p>
             </div>
-
-            <div class="uk-child-width-expand@s uk-text-center" uk-grid>
-               <div>
-                   <div class="uk-card uk-card-default uk-card-body card-height">
-                    <div class="ready-card">
-                    <img src="assets/images/e-book.png" alt="e-book">
-                    <h3>Access to premium eBooks</h3>
-                    <p>Instantly explore expert-written content across trending and practical topics.</p>
-                    </div>
-                   </div>
-               </div>
-               <div>
-                   <div class="uk-card uk-card-default uk-card-body grid-height">
-                    <div class="ready-image">
-                    <img src="assets/images/quitz-reward.png" alt="quitz-reward">
-                    <div class="head-wrap">
-                    <h3>Interactive Quizzes with Rewards</h3>
-                    <p>Make learning fun and profitable with engaging, gamified quizzes.</p>
-                    </div>
-                    </div>
-                   </div>
-               </div>
-               <div>
-                   <div class="uk-card uk-card-default uk-card-body card-height">
-                    <div class="ready-card">
-                    <img src="assets/images/earn.png" alt="earn">
-                    <h3>Earning Opportunities from Day 1</h3>
-                    <p>Turn your time and knowledge into real income from the moment you sign up.</p>
-                    </div>
-                   </div>
-               </div>
-           </div>
+            
+            <div class="ready-cards">
+                <div class="ready-card-green">
+                <img src="assets/images/e-book.png" alt="e-book">
+                <h3>Access to premium eBooks</h3>
+                <p>Instantly explore expert-written content across trending and practical topics.</p>
+            </div>
+            <div class="ready-card-image">
+                <img src="assets/images/quitz-reward.png" alt="quitz-reward">
+                <div class="quizes-content">
+                <h3>Interactive Quizzes with Rewards</h3>
+                <p>Make learning fun and profitable with engaging, gamified quizzes.</p>
+                </div>
+            </div>
+            <div class="ready-card-pink">
+                <img src="assets/images/earn.png" alt="earn">
+                <h3>Earning Opportunities from Day 1</h3>
+                <p>Turn your time and knowledge into real income from the moment you sign up.</p>
+            </div>
+            </div>
         </div>
     </section>
 
@@ -198,91 +185,68 @@
         </div>
     </div>
 
-    <section class="footer">
-        <div class="container">
-            <div class="footer-left">
-                <img src="assets/images/footer-logo.png" alt="logo">
-                <p>Watch our quick video tutorial to complete your <br> registration in under 2 minutes. Thousands have <br> already started learning, earning, and growing <br> with StepUp Amigos. What are you waiting for?</p>
-                <h3>Connect With Us</h3>
-                <div class="social-media-logos">
-                    <a href="#"><img src="assets/images/fb-logo.png" alt="facebook"></a>
-                    <a href="#"><img src="assets/images/thread-logo.png" alt="thread"></a>
-                    <a href="#"><img src="assets/images/insta-logo.png" alt="instagram"></a>
-                    <a href="#"><img src="assets/images/tiktok-logo.png" alt="tiktok"></a>
-                </div>
-            </div>
-            <div class="footer-mid-left">
-                <h3>Explore</h3>
-                <ul>
-                    <li><a href="#"></a>Home</li>
-                    <li><a href="#"></a>Contact</li>
-                    <li><a href="#"></a>Our Franchiso</li>
-                    <li><a href="#"></a>FAQ</li>
-                    <li><a href="#"></a>Terms And Condition</li>
-                    <li><a href="#"></a>Privacy Policy</li>
-                    <li><a href="#"></a>Credentials</li>
-                </ul>
-            </div>
 
-            <div class="contact-information">
-                <h3>Contact Information</h3>
-                <div class="contact">
-                    <img src="assets/images/phone-number.png" alt="contact">
-                    <span>+977-9701429606, <br> +977-9709088415</span>
-                </div>
-                <div class="mail">
-                    <img src="assets/images/mail-icon.png" alt="mail">
-                    <span>admin@stepup-amigos.com</span>
-                </div>
-                <div class="location">
-                    <img src="assets/images/location.png" alt="location">
-                    <span>Head Office <br> Kathmandu Ward No. 32, Koteshwor, Chhapro</span>   
-                </div>
-                <div class="location1">
-                    <img src="assets/images/location.png" alt="location">
-                    <span>Branch Office <br>Pokhara Ward No. 5, Prashang, Kaski, Gandaki</span>
-                </div>
-                <div class="location2">
-                    <img src="assets/images/location.png" alt="location">
-                    <span>Backend Office <br> Chennai, Tamilnadu</span>
-                </div>
-            </div>
 
-            <div class="read-more">
-                <h3>Read More, Earn <br>More, Live More</h3>
-                <P>Stay updated with our latest e-book releases <br> and offers by subscribing.</P>
-                <a href="#" class="btn-phone">Enter Your Phone Number </a> 
-                <a href="#" class="subsscribe0btn">Subscribe</a>
-                <img src="assets/images/big-logo.png" alt="logos">
-
-            </div>
-
-        </div>
-        <div class="payment">
-            <div class="container">
-            <div class="we-accept-btn">
-                <div class="we-accept-badges">
-                    <div class="secure">
-                        <a href="#"><img src="assets/images/secure.png" alt="secure-badge"></a>
+    <footer class="footer">
+        <div class="container ">
+            <div class="four-grid">
+                <div class="footer-left">
+                    <img src="assets/images/footer-logo.png">
+                    <p>Watch our quick video tutorial to complete your registration in under 2 minutes. Thousands have
+                        already started learning, earning, and growing with StepUp Amigos. What are you waiting for?</p>
+                    <h3 class="firstgrid_h3">Connect With Us</h3>
+                    <div class="flex circle">
+                        <div class="circle-bg">
+                            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                        </div>
+                        <div class="circle-bg">
+                            <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                        </div>
+                        <div class="circle-bg">
+                            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                        </div>
+                        <div class="circle-bg">
+                            <a href="#"><i class="fa-brands fa-tiktok"></i></a>
+                        </div>
                     </div>
-                    <div class="verisign">
-                        <a href="#"><img src="assets/images/verisign-secured.png" alt="versigned-secured"></a>
-                    </div>
-                    <div class="khalti">
-                        <a href="#"><img src="assets/images/Khalti.png" alt="kahlti"></a>
-                    </div>
-                    <div class="badge5">
-                        <a href="#"><img src="assets/images/badge5.png" alt="badge5"></a>
-                    </div>
-                    <div class="badge6">
-                        <a href="#"><img src="assets/images/badge6.png" alt="badge6"></a>
-                    </div>
-
                 </div>
+
+                <div class="explore">
+                    <h3>Explore</h3>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">Our Franchise</a></li>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Terms And Conditions</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Credentials</a></li>
+                    </ul>
+                </div>
+                <div class="contact-info">
+                    <h3>Contact Information</h3>
+                    <div class="flex"><div class="grey-bg"><i class="fa-solid fa-phone"></i></div><span>+977-9701429606, <br> +977-9709088415</span></div>
+                    <div class="flex"><div class="grey-bg"><i class="fa-solid fa-envelope"></i></div><span class="mail">Admin@Stepup-Amigos.Com</span></div>
+                    <div class="flex"><div class="grey-bg"><i class="fa-solid fa-location-dot"></i></div><span><strong>Head Office</strong><br> Kathmandu Ward No. 32,<br>Koteshwor, Chhapro</span></div>
+                    <div class="flex"><div class="grey-bg"><i class="fa-solid fa-location-dot"></i></div><span><strong>Branch Office</strong><br> Pokhara Ward No.5,<br> Prashang, Kaski, Gandaki</span></div>
+                    <div class="flex"><div class="grey-bg"><i class="fa-solid fa-location-dot"></i></div><span><strong>Backend Office</strong><br>Chennai,<br>Tamilnadu</span></div>
+                </div>
+
+                <div class="subscribe">
+                    <h3>Read More, Earn<br> More, Live More</h3>
+                    <p>Stay updated with our latest e-book releases and <br>offers by subscribing.</p>
+                    <form class="subscribe-form flex flex-between">
+                        <input type="text" placeholder="Enter your phone number" />
+                        <div class=" subscribe-btn btn"><a href="#">subscribe</a></div>
+                    </form>
+                    <img src="assets/images/big-logo.png" alt="logo">
+                </div>
+                </div>
+
             </div>
         </div>
-    </div>
-</section>
+    </footer>
+
    
 
 
