--- a/home.html
+++ b/home.html
@@ -34,12 +34,12 @@
             </div>
         </div>
 
-        <section class="gif-body">
+        <section class="banner_section">
             <div class="container">
                 <div class="content-wrapper">
                     <div class="text-content">
-                        <h2><span class="learn">Learn,</span> Play, And <span class="earn">Earn<img src="assets/images/gif1.gif" alt="gif1" class="gif1"> </span> <br> With StepUp Amigos!</h2>
-                        <p>Dive into emerging industries, challenge your knowledge with quizzes, and earn rewards—all in one platform.</p>
+                        <h2><span class="learn">Learn,</span> More. Hear <span class="more">More<img src="assets/images/gif1.gif" alt="gif1" class="gif1"> </span> <br> Turning Data into Voices, <br>and Voices into Knowledge</h2>
+                        <p>Empowering the future with Data, Knowledge, and AI-driven Innovation</p>
                         <a href="#" class="btn">Get Started Now <i class="fa-solid fa-arrow-right" style="color: #fff;"></i></a>
                     </div>
                 </div>
@@ -49,11 +49,9 @@
     </header>
 
     <div class="container">
-    <div class="card-content">
-        <div class="container">
+    <div class="card-content ">
         <h2>What Makes StepUp <br>Amigos Different? </h2>
         <p>Because We Turn Learning Into Opportunity — Discover, <br> Compete, and Earn on One Powerful Platform.</p>
-        </div>
     </div>
       <div class="uk-grid uk-grid-medium" data-uk-grid>
         <div class="uk-width-1-3@m">
@@ -82,14 +80,14 @@
     </div>
 
 
-    <section class="banner">
+    <section class="join-stepup">
         <div class="container">
-            <div class="banner-text">
+            <div class="head-content">
                 <h2>Join the StepUp Movement</h2>
                 <p>Our growing community is learning, playing, and earning. Be the next success story.</p>
             </div>
 
-            <div class="banner-card">
+            <div class="steup-card">
                 <div class="card1">
                     <img src="assets/images/card1-icon.png" alt="users">
                     <h2>1,000+</h2>
@@ -116,14 +114,13 @@
     </section>
 
 
-    <section class="sub-banner">
+    <section class="ready_to_start">
         <div class="container">
             <div class="sub-text">
                 <h2>Ready to Start? </h2>
                 <span>Register Now — It’s FREE</span>
                 <p>Don’t just scroll—get involved.</p>
             </div>
-            
             <div class="ready-cards">
                 <div class="ready-card-green">
                 <img src="assets/images/e-book.png" alt="e-book">
@@ -138,7 +135,9 @@
                 </div>
             </div>
             <div class="ready-card-pink">
+                <div class="card-bg">
                 <img src="assets/images/earn.png" alt="earn">
+                </div>
                 <h3>Earning Opportunities from Day 1</h3>
                 <p>Turn your time and knowledge into real income from the moment you sign up.</p>
             </div>
@@ -146,7 +145,7 @@
         </div>
     </section>
 
-    <div class="video-banner">
+    <section class="video-section">
         <div class="container">
             <div class="uk-width-1-3@m">
             <div class="video">
@@ -170,10 +169,10 @@
             </div>
             </div>
         </div>
-    </div>
+    </section>
 
 
-    <div class="money-section">
+    <section class="ready-to-steup">
         <div class="container">
             <div class="money-content">
                 <h2>Ready to Step Up?</h2>
@@ -181,15 +180,15 @@
                 <p>Watch our quick video tutorial to complete your registration in under 2 minutes. <br>Thousands have already started learning, earning, and growing with StepUp Amigos. What are you waiting for? </p>
                 <a href="#" class="btns">Get Started for Free <i class="fa-solid fa-arrow-right" style="color: #fff;"></i></a>
             </div>
-            <img src="assets/images/money.png" alt="money">
+            <img class="money" src="assets/images/money.png" alt="money">
         </div>
-    </div>
+    </section>
 
 
 
     <footer class="footer">
         <div class="container ">
-            <div class="four-grid">
+            <div class="grid">
                 <div class="footer-left">
                     <img src="assets/images/footer-logo.png">
                     <p>Watch our quick video tutorial to complete your registration in under 2 minutes. Thousands have
@@ -242,8 +241,26 @@
                     <img src="assets/images/big-logo.png" alt="logo">
                 </div>
                 </div>
-
+                <div class="we-accept">
+                    <h3>We Accept</h3>
+                    <div class="payment-badges">
+                    <a href="#"><img src="assets/images/secure.png" alt="secure"></a>
+                    <div class="dot-line"></div>
+                    <a href="#"><img src="assets/images/verisign-secured.png" alt="verisign-secured"></a>
+                    <div class="dot-line"></div>
+                    <a href="#"><img src="assets/images/Khalti.png" alt="Khalti"></a>
+                    <div class="dot-line"></div>
+                    <a href="#"><img src="assets/images/badge5.png" alt="badge5"></a>
+                    <div class="dot-line"></div>
+                    <a href="#"><img src="assets/images/badge6.png" alt="badge6"></a>
+                </div>
             </div>
+            <hr class="vertical-line">
+            <div class="footer-bottom">
+                <span>© 2025 Stepup Amigos. All rights reserved.</span>
+                <span>Designed & Developed by: Genesis Web Technology</span>
+            </div>
+        </div>    
         </div>
     </footer>
 
