spacing in 2nd section maintained and burger menu working part done

--- a/home.html
+++ b/home.html
@@ -34,6 +34,25 @@
             </div>
         </div>
 
+         <div class="mobile-nav" id="mobileNav">
+        <div class="mobile-nav-header">
+            <div class="logo">
+                <img src="assets/images/logo.png" alt="logo">
+            </div>
+            <button class="close-btn" id="closeBtn">&times;</button>
+        </div>
+        <ul class="nav">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Packages</a></li>
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </div>
+
+    <!-- Overlay -->
+    <div class="nav-overlay" id="navOverlay"></div>
+
+
         <section class="banner_section">
             <div class="container">
                 <div class="content-wrapper">
@@ -258,25 +277,13 @@
             <hr class="vertical-line">
             <div class="footer-bottom">
                 <span>© 2025 Stepup Amigos. All rights reserved.</span>
-                <span>Designed & Developed by: Genesis Web Technology</span>
+                <span><a href="#">Designed & Developed by: Genesis Web Technology</a></span>
             </div>
         </div>    
         </div>
     </footer>
 
-   
-
-
-
-
-
-
-
-
-
-
-
-
+    <script src="assets/js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.21.5/dist/js/uikit.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.21.5/dist/js/uikit-icons.min.js"></script>
 </body>
