--- a/home.html
+++ b/home.html
@@ -57,7 +57,7 @@
             <div class="container">
                 <div class="content-wrapper">
                     <div class="text-content">
-                        <h2><span class="learn">Learn,</span> More. Hear <span class="more">More<img src="assets/images/gif1.gif" alt="gif1" class="gif1"> </span> <br> Turning Data into Voices, <br>and Voices into Knowledge</h2>
+                        <h2><span class="learn">Learn,</span> More. Hear  More<img src="assets/images/gif1.gif" alt="gif1" class="gif1"> </span> <br> Turning Data Into Voices, <br>And Voices Into Knowledge</h2>
                         <p>Empowering the future with Data, Knowledge, and AI-driven Innovation</p>
                         <a href="#" class="btn">Get Started Now <i class="fa-solid fa-arrow-right" style="color: #fff;"></i></a>
                     </div>
@@ -67,43 +67,38 @@
         </section>
     </header>
 
+    <section class="what_makes_section">
     <div class="container">
-    <div class="card-content ">
-        <h2>What Makes StepUp <br>Amigos Different? </h2>
-        <p>Because We Turn Learning Into Opportunity — Discover, <br> Compete, and Earn on One Powerful Platform.</p>
-    </div>
-      <div class="uk-grid uk-grid-medium" data-uk-grid>
-        <div class="uk-width-1-3@m">
+        <div class="card-content ">
+            <h2>What Makes StepUp <br>Amigos Different? </h2>
+            <p>Because We Turn Learning Into Opportunity — Discover, <br> Compete, and Earn on One Powerful Platform.</p>
+        </div>
+        <div class="card-grid">
             <div class="why-card">
-
                 <img src="assets/images/img1.png" alt="">
-                <h3 class="uk-card-title">Play Quizzes, Sharpen Skills</h3>
+                <h3>Play Quizzes, Sharpen Skills</h3>
                 <p>Interactive quizzes that help you retain knowledge while earning points and competing with others.</p>
             </div>
-        </div>
-        <div class="uk-width-1-3@m">
-        <div class="why-card">
-            <img src="assets/images/img2.png" alt="">
-            <h3 class="uk-card-title">Earn While You Learn</h3>
-            <p>Earn real rewards by completing quizzes, referring friends, and engaging with the platform.</p>
-        </div>
-        </div>
-        <div class="uk-width-1-3@m">
-        <div class="why-card">
-            <img src="assets/images/img3.png" alt="">
-            <h3 class="uk-card-title">Buy Books with Earnings</h3>
-            <p>Redeem your quiz earnings to buy exclusive eBooks—learn more without spending a rupe</p>
-        </div>
+            <div class="why-card">
+                <img src="assets/images/img2.png" alt="">
+                <h3>Earn While You Learn</h3>
+                <p>Earn real rewards by completing quizzes, referring friends, and engaging with the platform.</p>
+            </div>
+            <div class="why-card">
+                <img src="assets/images/img3.png" alt="">
+                <h3>Buy Books with Earnings</h3>
+                <p>Redeem your quiz earnings to buy exclusive eBooks—learn more without spending a rupe</p>
+            </div>
         </div>
     </div>
-    </div>
+</section>
 
 
     <section class="join-stepup">
         <div class="container">
             <div class="head-content">
-                <h2>Join the StepUp Movement</h2>
-                <p>Our growing community is learning, playing, and earning. Be the next success story.</p>
+                <h2>Join the StepUp<br>Movement</h2>
+                <p>Our growing community is learning, playing<br>and earning. Be the next success story.</p>
             </div>
 
             <div class="steup-card">
@@ -136,8 +131,7 @@
     <section class="ready_to_start">
         <div class="container">
             <div class="sub-text">
-                <h2>Ready to Start? </h2>
-                <span>Register Now — It’s FREE</span>
+                <h2>"Ready to Start?" <br> Register Now — It’s FREE</h2>
                 <p>Don’t just scroll—get involved.</p>
             </div>
             <div class="ready-cards">
@@ -166,26 +160,17 @@
 
     <section class="video-section">
         <div class="container">
-            <div class="uk-width-1-3@m">
             <div class="video">
                 <img src="assets/images/video.png" alt="video">
             </div>
-            <!-- <div class="play-button">
-                <img src="assets/images/play-button.png" alt="button">
-            </div> -->
-            </div>
-            <div class="uk-width-1-3@m">
             <div class="content">
                 <h2>What Our <br>  Users Are Saying</h2>
                 <p>Join a growing community of learners and earners who are transforming their free time into knowledge and income. Don’t just take our word for it—see what our users have to say!</p>
             </div>
-            </div>
-            <div class="uk-width-1-3@m">
             <div class="card-container">
                 <div class="card">
                     <img src="assets/images/overlap.png" alt="card1">
                 </div>
-            </div>
             </div>
         </div>
     </section>
@@ -196,7 +181,7 @@
             <div class="money-content">
                 <h2>Ready to Step Up?</h2>
                 <span>Need Help Registering?</span>
-                <p>Watch our quick video tutorial to complete your registration in under 2 minutes. <br>Thousands have already started learning, earning, and growing with StepUp Amigos. What are you waiting for? </p>
+                <p>Watch our quick video tutorial to complete your registration in under 2 minutes.Thousands have  <br>already started learning, earning, and growing with StepUp Amigos. What are you waiting for? </p>
                 <a href="#" class="btns">Get Started for Free <i class="fa-solid fa-arrow-right" style="color: #fff;"></i></a>
             </div>
             <img class="money" src="assets/images/money.png" alt="money">
